--- a/notebooks/unit1/unit1.ipynb
+++ b/notebooks/unit1/unit1.ipynb
@@ -252,8 +252,7 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "!pip install gymnasium[box2d]"
+        "!pip install pygame==2.5.2 box2d-py==2.3.5\n"
       ],
       "metadata": {
         "id": "f_WFx1d9BneU"
@@ -455,7 +454,7 @@
       "source": [
         "import gymnasium as gym\n",
         "\n",
-        "# First, we create our environment called LunarLander-v2\n",
+        "# First, we create our environment called LunarLander-mj\n",
         "env = gym.make(\"LunarLander-v2\")\n",
         "\n",
         "# Then we reset this environment\n",
@@ -689,7 +688,16 @@
         "# TODO: Define a PPO MlpPolicy architecture\n",
         "# We use MultiLayerPerceptron (MLPPolicy) because the input is a vector,\n",
         "# if we had frames as input we would use CnnPolicy\n",
-        "model ="
+        "model = PPO(\n",
+        "    policy = 'MlpPolicy',\n",
+        "    env = env,\n",
+        "    n_steps = 1024,\n",
+        "    batch_size = 64,\n",
+        "    n_epochs = 4,\n",
+        "    gamma = 0.999,\n",
+        "    gae_lambda = 0.98,\n",
+        "    ent_coef = 0.01,\n",
+        "    verbose=1)"
       ]
     },
     {
@@ -742,10 +750,10 @@
       },
       "outputs": [],
       "source": [
-        "# TODO: Train it for 1,000,000 timesteps\n",
-        "\n",
-        "# TODO: Specify file name for model and save the model to file\n",
-        "model_name = \"ppo-LunarLander-v2\"\n"
+        "# Train it for 1,000,000 timesteps\n",
+        "model.learn(total_timesteps=1000000)\n",
+        "model_name = \"ppo-LunarLander-v2\"\n",
+        "model.save(model_name)"
       ]
     },
     {
@@ -989,50 +997,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "I2E--IJu8JYq"
-      },
-      "outputs": [],
-      "source": [
-        "import gymnasium as gym\n",
-        "\n",
-        "from stable_baselines3 import PPO\n",
-        "from stable_baselines3.common.vec_env import DummyVecEnv\n",
-        "from stable_baselines3.common.env_util import make_vec_env\n",
-        "\n",
-        "from huggingface_sb3 import package_to_hub\n",
-        "\n",
-        "# PLACE the variables you've just defined two cells above\n",
-        "# Define the name of the environment\n",
-        "env_id = \"LunarLander-v2\"\n",
-        "\n",
-        "# TODO: Define the model architecture we used\n",
-        "model_architecture = \"PPO\"\n",
-        "\n",
-        "## Define a repo_id\n",
-        "## repo_id is the id of the model repository from the Hugging Face Hub (repo_id = {organization}/{repo_name} for instance ThomasSimonini/ppo-LunarLander-v2\n",
-        "## CHANGE WITH YOUR REPO ID\n",
-        "repo_id = \"ThomasSimonini/ppo-LunarLander-v2\" # Change with your repo id, you can't push with mine 😄\n",
-        "\n",
-        "## Define the commit message\n",
-        "commit_message = \"Upload PPO LunarLander-v2 trained agent\"\n",
-        "\n",
-        "# Create the evaluation env and set the render_mode=\"rgb_array\"\n",
-        "eval_env = DummyVecEnv([lambda: gym.make(env_id, render_mode=\"rgb_array\")])\n",
-        "\n",
-        "# PLACE the package_to_hub function you've just filled here\n",
-        "package_to_hub(model=model, # Our trained model\n",
-        "               model_name=model_name, # The name of our trained model\n",
-        "               model_architecture=model_architecture, # The model architecture we used: in our case PPO\n",
-        "               env_id=env_id, # Name of the environment\n",
-        "               eval_env=eval_env, # Evaluation Environment\n",
-        "               repo_id=repo_id, # id of the model repository from the Hugging Face Hub (repo_id = {organization}/{repo_name} for instance ThomasSimonini/ppo-LunarLander-v2\n",
-        "               commit_message=commit_message)\n"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "T79AEAWEFIxz"
@@ -1078,6 +1042,50 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "I2E--IJu8JYq"
+      },
+      "outputs": [],
+      "source": [
+        "import gymnasium as gym\n",
+        "\n",
+        "from stable_baselines3 import PPO\n",
+        "from stable_baselines3.common.vec_env import DummyVecEnv\n",
+        "from stable_baselines3.common.env_util import make_vec_env\n",
+        "\n",
+        "from huggingface_sb3 import package_to_hub\n",
+        "\n",
+        "# PLACE the variables you've just defined two cells above\n",
+        "# Define the name of the environment\n",
+        "env_id = \"LunarLander-v2\"\n",
+        "\n",
+        "# TODO: Define the model architecture we used\n",
+        "model_architecture = \"PPO\"\n",
+        "\n",
+        "## Define a repo_id\n",
+        "## repo_id is the id of the model repository from the Hugging Face Hub (repo_id = {organization}/{repo_name} for instance ThomasSimonini/ppo-LunarLander-v2\n",
+        "## CHANGE WITH YOUR REPO ID\n",
+        "repo_id = \"Mblaster98/ppo-LunarLander-v2\" # Change with your repo id, you can't push with mine 😄\n",
+        "\n",
+        "## Define the commit message\n",
+        "commit_message = \"Upload PPO LunarLander-v2 trained agent\"\n",
+        "\n",
+        "# Create the evaluation env and set the render_mode=\"rgb_array\"\n",
+        "eval_env = DummyVecEnv([lambda: gym.make(env_id, render_mode=\"rgb_array\")])\n",
+        "\n",
+        "# PLACE the package_to_hub function you've just filled here\n",
+        "package_to_hub(model=model, # Our trained model\n",
+        "               model_name=model_name, # The name of our trained model\n",
+        "               model_architecture=model_architecture, # The model architecture we used: in our case PPO\n",
+        "               env_id=env_id, # Name of the environment\n",
+        "               eval_env=eval_env, # Evaluation Environment\n",
+        "               repo_id=repo_id, # id of the model repository from the Hugging Face Hub (repo_id = {organization}/{repo_name} for instance ThomasSimonini/ppo-LunarLander-v2\n",
+        "               commit_message=commit_message)\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "bhb9-NtsinKB"
@@ -1101,14 +1109,43 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "pip install stable-baselines3==2.1.0\n"
+      ],
+      "metadata": {
+        "id": "eyYFbY0kU4Hq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import gymnasium as gym\n",
+        "import stable_baselines3\n",
+        "import shimmy\n",
+        "\n",
+        "print(\"Gymnasium version:\", gym.__version__)\n",
+        "print(\"Stable Baselines3 version:\", stable_baselines3.__version__)\n",
+        "print(\"Shimmy version:\", shimmy.__version__)\n"
+      ],
+      "metadata": {
+        "id": "QM5Asz16VHVV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "oj8PSGHJfwz3"
       },
       "outputs": [],
       "source": [
+        "from stable_baselines3 import PPO\n",
         "from huggingface_sb3 import load_from_hub\n",
-        "repo_id = \"Classroom-workshop/assignment2-omar\" # The repo_id\n",
+        "repo_id = \"Mblaster98/ppo-LunarLander-v2\" # The repo_id\n",
         "filename = \"ppo-LunarLander-v2.zip\" # The model filename.zip\n",
         "\n",
         "# When the model was trained on Python 3.8 the pickle protocol is 5\n",
@@ -1148,6 +1185,26 @@
         "mean_reward, std_reward = evaluate_policy(model, eval_env, n_eval_episodes=10, deterministic=True)\n",
         "print(f\"mean_reward={mean_reward:.2f} +/- {std_reward}\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from stable_baselines3.common.env_util import make_vec_env\n",
+        "from stable_baselines3.common.evaluation import evaluate_policy\n",
+        "\n",
+        "# Create a vectorized env compatible with SB3\n",
+        "eval_env = make_vec_env(\"LunarLander-v2\", n_envs=1)\n",
+        "\n",
+        "# Evaluate agent\n",
+        "mean_reward, std_reward = evaluate_policy(model, eval_env, n_eval_episodes=10, deterministic=True)\n",
+        "\n",
+        "print(f\"mean_reward={mean_reward:.2f} +/- {std_reward}\")\n"
+      ],
+      "metadata": {
+        "id": "bofsYuCxWGe0"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
